@@ -33,7 +33,13 @@ if(typeof(String.prototype.trim) === "undefined")
     };
 }
 
-
+// shitch processing notice
+jQuery.fn.dataTableExt.oApi.fnProcessingIndicator = function ( oSettings, onoff ) {
+    if ( typeof( onoff ) == 'undefined' ) {
+        onoff = true;
+    }
+    this.oApi._fnProcessingDisplay( oSettings, onoff );
+};
 
 // maps the table header of visible columns back to the aaData/aoColumns index
 $.fn.dataTableExt.oApi.fnGetTh  = function ( oSettings, iTh ){
