@@ -2,8 +2,9 @@
 * Changelog
 *******************
 
-2012-07-11  Fabian Buske	v0.1.1
+2012-07-12  Fabian Buske	v0.1.1
 	Datatables FixedHeader plugin and jquery slider incompatibility patched
+	Improved data loading and user feedback during processing
 
 2012-07-10  Fabian Buske	v0.1.0
 	First release of Triplex-Inspector
